# booty-hunt

./: CLAUDE.md  STORE_LAUNCH_GATE.md  eslint.config.js  index.html  package-lock.json  package.json  test-vfx-sfx.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  deploy.yml
design-docs/: 01-Overview.md  02-Core-Systems.md  03-Combat-Design.md  04-Progression-Design.md  05-AI-Behavior.md  06-World-Generation.md  07-Event-System.md  08-Audio-Design.md  09-Technical-Architecture.md  10-V2-Design-Plan.md  99-Appendix-Data-Tables.md  README.md
scripts/: analyze-telemetry.mjs
server/: Cargo.toml
server/src/: db.rs  error.rs  main.rs  schema.sql  validation.rs
server/src/handlers/: ghost_fleet.rs  signal_fire.rs  tide_calendar.rs
server/src/models/: ghost_fleet.rs  signal_fire.rs  tide_calendar.rs
server/src/services/: ghost_fleet.rs  mod.rs  signal_fire.rs  tide_calendar.rs
src/: ApiClient.test.ts  ApiClient.ts  Audio.ts  Cataclysm.ts  Combat.ts  Crew.test.ts  Crew.ts  DevPanel.ts  EconomySystem.ts  EditorCamera.ts  EditorUI.ts  Effects.ts  EnemyAI.ts  Events.ts  FactionSystem.ts  GhostReplay.ts  GhostTape.test.ts  GhostTape.ts  HeatSystem.test.ts  HeatSystem.ts  Juice.ts  MapNodeSystem.ts  NarrativeSystem.ts  Ocean.ts  Port.ts  Progression.test.ts  Progression.ts  RunCheckpoint.test.ts  RunCheckpoint.ts  SaveMigration.test.ts  Scenario.ts  ScenarioEditor.ts  ShantyEngine.ts  Ship.ts  Sky.ts  TelemetrySystem.ts  Tutorial.ts  Types.ts  UI.ts  V2Content.ts  (+4 more)
src/data/: doctrines.v2.json  events.v2.json  factions.v2.json  regions.v2.json
(+1 files in other folders)
