[package]
name = "booty-hunt-server"
version = "0.1.0"
edition = "2021"

[dependencies]
ntex = { version = "2", features = ["tokio"] }
ntex-cors = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
flate2 = "1"
rand = "0.8"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
